--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "exitcatch.h": "c",
-        "color.h": "c"
+        "color.h": "c",
+        "bpf_core_read.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
